--- a/app/scss/variables.scss
+++ b/app/scss/variables.scss
@@ -1,2 +1,12 @@
 $primary-color: #fff;
-$highlight-color: pink;
+$font-color: #141414;
+$highlight-color: #FF4D61;
+
+$font-stack: 'Josefin Slab', serif;
+$font-text: 'Roboto', sans-serif;
+
+$border-radius: 2rem;
+
+$media-phone: 28.125rem;
+$media-tablet: 48rem;
+$media-deskop: 80rem;
