--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -1,10 +1,63 @@
-@import "./variables.scss";
+@import './variables.scss';
+@import './typography.scss';
 
-*{
+* {
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
 }
 
 *::before,
 *::after {
     box-sizing: border-box;
+}
+
+.container {
+    margin: 1.75rem;
+    @media (min-width: $media-tablet) {
+        width: 33.75rem;
+        margin: auto;
+    }
+    .btn {
+        display: inline-block;
+        margin-top: 1.25rem;
+        color:$font-color;
+        padding: 18px 20px;
+        border-radius: $border-radius;
+        border: 1px solid $font-color;
+        @media(min-width: $media-tablet) {
+            text-align: initial;
+            display: inline-block;
+            margin-top: 3.125rem;
+        }
+        &:hover,
+        &:focus {
+            transition: 0.4s all ease-in-out;
+            background: $highlight-color;
+            border: 1px solid $primary-color;
+            color: $primary-color;
+            outline: 0;
+        }
+    }
+}
+.fa-chevron-right {
+    margin-left: 8px;
+}
+.hidden {
+    display: none;
+}
+.img-size {
+    display: block;
+    width: 100%;
+    @media(min-width: $media-tablet) {
+        width:30%;
+    }
+}
+main {
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+}
+ul li h2 {
+    font-size: 2em;
 }
