--- a/app/scss/variables.scss
+++ b/app/scss/variables.scss
@@ -1,6 +1,8 @@
 $primary-color: #fff;
-$font-color: #141414;
 $highlight-color: #FF4D61;
+$headline-base: #141414;
+$font-base:#4D5456;
+$off-focus: #B9C6CA;
 
 $font-stack: 'Josefin Slab', serif;
 $font-text: 'Roboto', sans-serif;
@@ -9,4 +11,4 @@ $border-radius: 2rem;
 
 $media-phone: 28.125rem;
 $media-tablet: 48rem;
-$media-deskop: 80rem;
+$media-desktop: 80rem;
