--- a/app/scss/typography.scss
+++ b/app/scss/typography.scss
@@ -2,6 +2,7 @@
 
 h1, h2, h3, h4, h5, h6 {
     font-family: $font-stack;
+    color: $headline-base;
 }
 h1 {
     font-size: 3rem;
@@ -14,6 +15,7 @@ h1 {
     }
 }
 p, input, label, button, a {
+    color: $font-base;
     font-family: $font-text;
 }
 
@@ -22,13 +24,17 @@ p {
     line-height: 1.25rem;
     font-weight: 100;
     line-height: 1.25rem;
+    color: $font-base;
     @media(min-width: $media-tablet) {
         padding-top: 2.125rem;
         line-height: 1.5rem;
+        font-size: 1.2rem;
+        line-height: 1.6;
     }
 }
 
 a {
+    color: $font-base;
     font-weight: 100;
     text-decoration: none;
 }
@@ -36,4 +42,19 @@ a {
 ul {
     list-style-type: none;
     margin: 0;
+}
+
+h3 {
+    margin-top: 1.4rem;
+    font-size: 1.75rem;
+    @media(min-width: $media-tablet) {
+        margin-top: 2rem;
+    }
+}
+
+h2 {
+    line-height: auto;
+    @media(min-width: $media-desktop) {
+        line-height: 1.2;
+    }
 }
