--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -43,7 +43,7 @@ h3 {
   font-size: 1.75rem; }
   @media (min-width: 48rem) {
     h3 {
-      margin-top: 2rem; } }
+      margin-top: 2.3rem; } }
 
 h2 {
   line-height: auto; }
@@ -104,7 +104,7 @@ h2 {
     transition: 0.3s color ease; }
 
 .container.list li section {
-  display: flex;
+  display: block;
   max-height: 0;
   overflow: hidden;
   margin: 0 1em;
@@ -113,9 +113,14 @@ h2 {
     .container.list li section {
       margin: 0 14vw; } }
   @media (min-width: 80rem) {
+    .container.list li section {
+      display: flex; } }
+  @media (min-width: 80rem) {
     .container.list li section div {
       max-width: 50%;
       margin-right: 3rem; } }
+  .container.list li section div .context-padding {
+    padding-top: 1rem; }
 
 .container.list li h2 {
   transition: 0.4 color ease;
@@ -132,10 +137,14 @@ h2 {
 .fa-chevron-right {
   margin-left: 8px; }
 
-@media (min-width: 48rem) {
-  .container.list li section.selected {
-    margin-bottom: 2vw;
-    max-height: 370px; } }
+.container.list li section.selected {
+  max-height: 600px; }
+  @media (min-width: 48rem) {
+    .container.list li section.selected {
+      max-height: 850px; } }
+  @media (min-width: 80rem) {
+    .container.list li section.selected {
+      max-height: 420px; } }
 
 .notSelected {
   display: none; }
