--- a/app/scss/variables.scss
+++ b/app/scss/variables.scss
@@ -1,10 +1,10 @@
 $primary-color: #fff;
-$highlight-color: #FF4D61;
+$highlight-color: #FDCA42;
 $headline-base: #141414;
 $font-base:#4D5456;
 $off-focus: #B9C6CA;
 
-$font-stack: 'Josefin Slab', serif;
+$font-stack: 'Oswald', sans-serif;
 $font-text: 'Roboto', sans-serif;
 
 $border-radius: 2rem;
