--- a/app/css/typography.css
+++ b/app/css/typography.css
@@ -1,6 +1,7 @@
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Josefin Slab", serif;
-  color: #141414; }
+  font-family: "Oswald", sans-serif;
+  color: #141414;
+  text-shadow: -2px 3px 0px #FDCA42; }
 
 h1 {
   font-size: 3rem;
@@ -40,7 +41,8 @@ ul {
 
 h3 {
   margin-top: 1.4rem;
-  font-size: 1.75rem; }
+  font-size: 1.75rem;
+  text-shadow: none; }
   @media (min-width: 48rem) {
     h3 {
       margin-top: 2.3rem; } }
